examples/negative/modules/theory_outside_catalog.kai
# Negative fixture: a `theory` declaration is legal in exactly one
# compilation unit — the canonical kind catalog `core/kinds.kai`.
# Declaring one in user code (or any other file) is a hard error.
# `kind` declarations stay legal everywhere; only `theory` is gated.

theory Foo = { assoc, commut }

fn main() : Int = 0
